--- a/shopping-list.html
+++ b/shopping-list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Personal Shopping List</title>
+    <title>Sayem Shopping List</title>
 
     <!-- bootstrap -->
     <link
@@ -15,7 +15,7 @@
   </head>
   <body>
     <section>
-      <h1 class="text-danger text-center my-4">Personal Shopping List</h1>
+      <h1 class="text-danger text-center my-4">Sayem Shopping List</h1>
 
       <!-- toggle button -->
       <button
